--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fe-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ychigiji.github.io/ricky-morty",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@types/jest": "^26.0.15",
@@ -21,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     "@graphql-codegen/typescript": "^1.21.1",
     "@graphql-codegen/typescript-operations": "^1.17.15",
     "@graphql-codegen/typescript-react-apollo": "^2.2.3",
-    "@types/styled-components": "^5.1.9"
+    "@types/styled-components": "^5.1.9",
+    "gh-pages": "^5.0.0"
   }
 }
